# TOS-Builder

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Log.md  Makefile  PROPOSAL.md  README.md  README_zh-CN.md  build.rs
.github/workflows/: build-linux.yml  build-macos.yml  build-release.yml  build-windows.yml  build.yml
assets/logs/: Cargo failed to start the project.md  Project configuration.md  TOS-Builder add serialization configuration.md  TOS-Builder build supplement.md  TOS-Builder file decompression and configuration modification method.md  TOS-Builder miscellaneous.md  TOS-Builder partial component development.md  TOS-Builder render table configuration and log.md  Test new dependencies and configure menuconfig.md
ci/: build.sh
docs/logs/: About TOS project configuration.md  Inquiry_about_CubeMX_information.md  Rust test configuration TOS feasibility.md  STM32 environment configuration.md  Some principles of Kconfig.md  Some_principles_of_make_menuconfig.md  TOS-Builder download official Release package.md  TOS-Builder_asynchronous_download_TOS_resource_problem.md  TOS-Builder_dependency_installation_and_test.md  Test TOS-Builder about Rust some problems.md
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  ui.rs
src/components/: download.rs  export.rs  footer.rs  fs.rs  header.rs  input.rs  kinds.rs  mod.rs  popup.rs  unzip.rs
src/config/: at_config.rs  common.rs  cubemx_config.rs  mod.rs  tos_config.rs
src/handlers/: at_config_handler.rs  common_handler.rs  export_handler.rs  input_handler.rs  make_config_handler.rs  mod.rs  (+3 more)
src/pages/: mod.rs  (+5 more)
(+12 files in other folders)
