[package]
name = "tosbuilder"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Asklv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
zip = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.21.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_derive = "1.0.188"

log = "0.4.0"
simplelog = "^0.12.0"
askama = "0.12.1"
handlebars = "4.4.0"
xml = "0.8.10"
regex = "1.10.0"
